cms/package/skin/src/main/webapp/screen.css
/* ... */
.hippo-reorder table tr td{padding: 2px; padding-left: 4px; padding-bottom: 4px;}

/* Navigator */
/* ================================================ */
.hippo-browser-documents-small .hippo-perspective-title{color: white; padding: 2px; padding-left: 4px; float: left; padding-top: 5px;}
.hippo-browser-documents-small{background: transparent}
.hippo-browser-documents-small .hippo-browser-documents-small-folders h3{background: transparent url(images/filelistHeaderback.png) repeat-x; font-weight: normal; padding: 2px; padding-left: 6px; padding-bottom: 5px;}
 
.hippo-browser-documents-small .hippo-browser-documents-small-files{border-left: 1px solid #afafaf; border-right: 1px solid #afafaf; background: white;}
.hippo-browser-documents-small .hippo-browser-documents-small-folders{background: #f4f4f4; border-left: 1px solid #afafaf; border-bottom: 0px; border-top: 0px }
/* this is nasty and temporary, YUI wireframe needs an update */
.hippo-browser-documents-small .hippo-browser-documents-small-files .hippo-list-details{margin-top: 25px;}

.hippo-browser-documents-small .hippo-browser-documents-small-files {background: #ffffff url('images/document-list-back.png') repeat-x;}
/* toolbar requires some tweaks here */
.hippo-browser-documents-small .hippo-browser-documents-workflow select{width: 180px; padding: 1px; margin: 2px; background: transparent; border: 1px solid white; color: white;}
.hippo-browser-documents-small .hippo-browser-documents-workflow select option{color: #666666; background: white; padding: 1px;}

/* Tree Plugin */

/* overriding standard wicket tree styling */
/*
.hippo-tree {overflow: scroll; -ms-overflow-y: auto; overflow-y: auto; -ms-overflow-x: hidden; overflow-x: hidden; width: 200px;  z-index: 1;}
*/

/* remove margins */
.hippo-tree div.wicket-tree{margin: 0px; border: none;}
/* make sure the first folder level in the tree doens't have a left padding */
.hippo-tree div.wicket-tree div.a_{padding-left: 0px}
.hippo-tree div.wicket-tree div.a_ div.a_{padding-left: 1em}
/* make the rows expand so it will activate the scrolling of the .hippotree div */
.hippo-tree div.wicket-tree,
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{overflow: visible; white-space: nowrap}

.hippo-console-tree .hippo-tree div.wicket-tree {width: auto;}

/* set row height to a little higher for better clickability */
.hippo-tree div.wicket-tree div.row, 
.hippo-tree div.wicket-tree div.row-selected{padding-top: 2px; padding-bottom: 2px;}

.hippo-tree div.wicket-tree div.row .hippo-tree-dropdown-icon-container {background: transparent;}
.hippo-tree div.wicket-tree div.row:hover .hippo-tree-dropdown-icon-container, 
.hippo-tree div.wicket-tree div.row-selected:hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}
  
.hippo-tree div.wicket-tree div.row-selected {background-image: url("images/controls/folder-background-selected.png"); } /*background-position: 0px -20px;}*/

.hippo-tree div.wicket-tree div.row a,
.hippo-tree div.wicket-tree div.row-selected a {font-weight: normal; color: black;}

/* IE6 workaround */
.hippo-tree div.wicket-tree div.context-hover .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
}

.hippo-tree div.wicket-tree div.context-hover-selected .hippo-tree-dropdown-icon-container {
  background-image: url("images/controls/folder-workflow-icon.png"); 
  background-repeat: no-repeat;
  background-position: -1px -2px;
  
}

.hippo-tree .wicket-tree span.plus, 
.hippo-tree .wicket-tree span.minus {background-image: url("images/tree-icons.png"); width: 14px;}

.hippo-tree .wicket-tree span.junction, 
.hippo-tree .wicket-tree span.junction-last, 
.hippo-tree .wicket-tree span.corner, 
.hippo-tree .wicket-tree span.indent-line,
.hippo-tree .wicket-tree span.indent-blank {background-image: none; width: 14px;} 

.hippo-tree .icon-16{padding: 0px; width: 16px; height: 16px; display: block; float: left; margin-right: 5px; margin-left: 3px;}

/* mimetypes icons */
table tr.selected span.document-16, .document-16{background-image:url("images/icons/document-16.png")}
table tr.selected span.folder-16, .folder-16{background-image:url("images/icons/folder-16.png")}
table tr.selected span.folder-open-16, .folder-open-16{background-image:url("images/icons/folder-open-16.png")}

/* mimetypes icons for virtual trees */
table tr.selected span.document-virtual-16, .document-virtual-16{background-image:url("images/icons/document-16.png")}
table tr.selected span.folder-virtual-16, .folder-virtual-16{background-image:url("images/icons/folder-virtual-16.gif")}
table tr.selected span.folder-virtual-open-16, .folder-virtual-open-16{background-image:url("images/icons/folder-virtual-open-16.gif")}

/* Accordion */
.hippo-accordion-unit{background: #f4f4f4;}
/* change the tree if he's inside an accordion */
.hippo-accordion-unit .hippo-tree .wicket-tree{/*min-height: 100px;*/ margin-bottom: 0px; padding-left: 0px; padding-top: 0px; }

.hippo-accordion-unit h2{background-image: url("images/accordion-unit-back2.png"); background-repeat: repeat-x}

.hippo-accordion-unit h2 a{
background-image: url("images/accordion-unit-back.png"); 
background-repeat: no-repeat; 
color: #666666; 
display: block; 
height: 14px;
width: 100%;
padding: 5px;
padding-left: 0px; 
padding-right: 0px;
border-bottom: 1px solid #afafaf; 
font-weight: bold;
}
.hippo-accordion-unit h2 a span{padding-left: 20px;}

.hippo-accordion-unit h2 a{background-position: 0px 0px}
.hippo-accordion-unit h2 a:hover{background-position: 0px -96px}
.hippo-accordion-unit h2 a:active{background-position: 0px -120px}

.hippo-accordion-unit h2 a.focus{background-position: 0px -24px}
.hippo-accordion-unit h2 a.focus:hover{background-position: 0px -48px}
/* ... */

